hphp/test/slow/prop-type-hints/thrift.php.expectf
===================== binary deserializing ==================
=============================================================
===================== compact deserializing ==================
==============================================================
===================== binary deserializing ==================

Warning: Property 'TestStruct2::p5' declared as type DummyStruct, DummyStruct2 assigned in %s/thrift-defs.inc on line 109

Warning: Property 'TestStruct2::p1' declared as type bool, int assigned in %s/thrift.php on line 8

Warning: Property 'TestStruct2::p2' declared as type int, string assigned in %s/thrift.php on line 8

Warning: Property 'TestStruct2::p3' declared as type string, bool assigned in %s/thrift.php on line 8

Warning: Property 'TestStruct2::p5' declared as type DummyStruct, DummyStruct2 assigned in %s/thrift.php on line 8

Warning: Property 'TestStruct2::p6' declared as type ?int, string assigned in %s/thrift.php on line 8
=============================================================
===================== compact deserializing ==================

Warning: Property 'TestStruct2::p5' declared as type DummyStruct, DummyStruct2 assigned in %s/thrift-defs.inc on line 109

Warning: Property 'TestStruct2::p1' declared as type bool, int assigned in %s/thrift.php on line 16

Warning: Property 'TestStruct2::p2' declared as type int, string assigned in %s/thrift.php on line 16

Warning: Property 'TestStruct2::p3' declared as type string, bool assigned in %s/thrift.php on line 16

Warning: Property 'TestStruct2::p5' declared as type DummyStruct, DummyStruct2 assigned in %s/thrift.php on line 16

Warning: Property 'TestStruct2::p6' declared as type ?int, string assigned in %s/thrift.php on line 16
==============================================================
===================== binary deserializing ==================
=============================================================
===================== compact deserializing ==================
==============================================================
===================== binary deserializing ==================

Warning: Property 'TestStruct5::_type' declared as type string, int assigned in %s/thrift.php on line 8
=============================================================
===================== compact deserializing ==================

Warning: Property 'TestStruct5::_type' declared as type string, int assigned in %s/thrift.php on line 16
==============================================================
===================== binary deserializing ==================
=============================================================
===================== compact deserializing ==================
==============================================================
===================== binary deserializing ==================

Warning: Property 'TestStruct7::p3' declared as type HH\keyset, HH\dict assigned in %s/thrift.php on line 8

Warning: Property 'TestStruct7::p4' declared as type HH\Map, HH\dict assigned in %s/thrift.php on line 8

Warning: Property 'TestStruct7::p5' declared as type HH\Vector, HH\vec assigned in %s/thrift.php on line 8

Warning: Property 'TestStruct7::p6' declared as type HH\Set, HH\keyset assigned in %s/thrift.php on line 8

Warning: Property 'TestStruct7::p7' declared as type HH\darray, HH\Map assigned in %s/thrift.php on line 8

Warning: Property 'TestStruct7::p8' declared as type HH\varray, HH\Vector assigned in %s/thrift.php on line 8

Warning: Property 'TestStruct7::p9' declared as type HH\darray, HH\Set assigned in %s/thrift.php on line 8
=============================================================
===================== compact deserializing ==================

Warning: Property 'TestStruct7::p3' declared as type HH\keyset, HH\dict assigned in %s/thrift.php on line 16

Warning: Property 'TestStruct7::p4' declared as type HH\Map, HH\dict assigned in %s/thrift.php on line 16

Warning: Property 'TestStruct7::p5' declared as type HH\Vector, HH\vec assigned in %s/thrift.php on line 16

Warning: Property 'TestStruct7::p6' declared as type HH\Set, HH\keyset assigned in %s/thrift.php on line 16

Warning: Property 'TestStruct7::p7' declared as type HH\darray, HH\Map assigned in %s/thrift.php on line 16

Warning: Property 'TestStruct7::p8' declared as type HH\varray, HH\Vector assigned in %s/thrift.php on line 16

Warning: Property 'TestStruct7::p9' declared as type HH\darray, HH\Set assigned in %s/thrift.php on line 16
==============================================================
===================== binary deserializing ==================

Fatal error: Class undefined: DoesntExist in %s/thrift.php on line 8
